[gd_scene load_steps=9 format=3 uid="uid://gacxqlgbd4y1"]

[ext_resource type="PackedScene" uid="uid://cpf43x0vx56tv" path="res://Scenes/Objects/help_button.tscn" id="2_134an"]
[ext_resource type="PackedScene" uid="uid://yoxtqame1g32" path="res://Scenes/Objects/option_button.tscn" id="3_h2mmo"]
[ext_resource type="Script" path="res://Scenes/UI.gd" id="4_a28ap"]
[ext_resource type="Texture2D" uid="uid://bxhxjerocqya8" path="res://Assets/Help/p1.png" id="4_wm24s"]
[ext_resource type="Texture2D" uid="uid://ws3dgfyoq77" path="res://Assets/Help/p2.png" id="5_y4isg"]
[ext_resource type="Texture2D" uid="uid://dsxsbeukrdw3c" path="res://Assets/Help/p3.png" id="6_3vrnm"]
[ext_resource type="Texture2D" uid="uid://dl7r62jx0bpi2" path="res://Assets/Help/p4.png" id="7_74m8c"]
[ext_resource type="Texture2D" uid="uid://bdwpbow7w11ua" path="res://Assets/Help/p5.png" id="8_winlt"]

[node name="Parent" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 2)
zoom = Vector2(0.66, 0.66)
position_smoothing_enabled = true

[node name="HelpButton" parent="Camera2D" instance=ExtResource("2_134an")]
unique_name_in_owner = true
position = Vector2(678, -457)

[node name="OptionButton" parent="Camera2D" instance=ExtResource("3_h2mmo")]
unique_name_in_owner = true
position = Vector2(836, -457)

[node name="UI" type="Node2D" parent="."]
z_index = 10
script = ExtResource("4_a28ap")

[node name="HelpPages" type="Node2D" parent="UI"]
visible = false

[node name="p1" type="Sprite2D" parent="UI/HelpPages"]
texture = ExtResource("4_wm24s")

[node name="p2" type="Sprite2D" parent="UI/HelpPages"]
visible = false
texture = ExtResource("5_y4isg")

[node name="p3" type="Sprite2D" parent="UI/HelpPages"]
visible = false
texture = ExtResource("6_3vrnm")

[node name="p4" type="Sprite2D" parent="UI/HelpPages"]
visible = false
texture = ExtResource("7_74m8c")

[node name="p5" type="Sprite2D" parent="UI/HelpPages"]
visible = false
texture = ExtResource("8_winlt")

[connection signal="input_event" from="Camera2D/HelpButton" to="UI" method="_on_help_button_input_event"]
